--- a/aio/src/styles/2-modules/_table.scss
+++ b/aio/src/styles/2-modules/_table.scss
@@ -34,7 +34,7 @@ table {
     th,
     td {
       border-bottom: 1px solid $lightgray;
-      padding: 16px 32px;
+      padding: 16px;
       text-align: left;
       line-height: 24px;
       vertical-align: top;
